# shuttle-template

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: countries.rs  main.rs  selector.rs
src/selector/: mod.rs
