[package]
name = "rusty-scaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
cargo-watch = "8.5.2"
reqwest = { version = "0.12.3", features = ["blocking"] }
scraper = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
